# eikonal-solvers

./: README.md  TODO  TODO.md  pyproject.toml  reinstall_package.sh  setup.cfg  tox.ini
.github/workflows/: pylint.yml
doc/: references.bib
doc/examples/: README.md  distance-field-gradients.py  huang2021improved.py  jeong2008fast.py
src/eikonal_solvers/: __init__.py  fim.py  fmm.py
src/eikonal_solvers/torch/: fim.py
test/: benchmark_fim.py  benchmark_fmm.py  conftest.py  test_data.py  test_fim.py  test_fmm.py  test_torch_fim.py
